--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/Jakaza/iG-Gallary/issues"
   },
-  "homepage": "https://github.com/Jakaza/iG-Gallary#readme"
+  "homepage": "https://github.com/Jakaza/iG-Gallary#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
