--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Cloud Storage\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[DImage\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\"Image Cloud Storage\"",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "run": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/Jakaza/iG-Gallary#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
