--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.20.1",
     "cloudinary": "^1.34.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
