--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cloudinary": "^1.34.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "make-runnable": "^1.4.1",
     "pg": "^8.9.0"
   },
   "devDependencies": {
